tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_41.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               r := (z <= y);
               q := (((+ z) - (2 + (z + 200))) # 1223);
               p := (((2 DIV 1223) MOD ((1 MOD 2) DIV (200 - 200))) >= 1);
               z := 200;
               z := (+ (0 MOD ((- 1223) DIV (z - z))));
  (* error *)  z := ((- (z * z)) MOD (x - 1));
               x := 200;
               z := z;
               q := ((((1 + 1) * x) * ((0 * y) MOD x)) >= z);
               r := q
END Test16.